--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ html {
   scroll-behavior: smooth;
 }
 
+section {
+  scroll-margin-top: 100px;
+}
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
