--- a/style.css
+++ b/style.css
@@ -138,3 +138,18 @@ img {
   margin-top: 120px;
 }
 
+.nav-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-logo img {
+  height: 32px;
+  width: auto;
+}
+
+.nav-links a {
+  margin-left: 1.2rem;
+}
+
