--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@ html {
 section[id] {
   scroll-margin-top: 140px;
 }
+<script>
+  const burger = document.getElementById('burger');
+  const nav = document.querySelector('.main-nav');
+
+  burger.addEventListener('click', () => {
+    nav.classList.toggle('active');
+  });
+</script>
 
 body {
   margin: 0;
