--- a/style.css
+++ b/style.css
@@ -221,3 +221,20 @@ body {
   }
 }
 
+.site-footer {
+  margin-top: 80px;
+  padding: 30px 20px;
+  background: #f4f4f1;
+  text-align: center;
+  font-size: 14px;
+}
+
+.site-footer a {
+  margin: 0 15px;
+  text-decoration: none;
+  color: #2e2e2e;
+}
+
+.site-footer a:hover {
+  text-decoration: underline;
+}
